.jjconflict-base-0/apps/honcho/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honcho
spec:
  defaultBackend:
    service:
      name: honcho
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - honcho
